methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:13: error: Unmatched closing brace '}' ignored here
}
^